--- a/src/app/blocks/blocks.component.html
+++ b/src/app/blocks/blocks.component.html
@@ -12,9 +12,9 @@
     </div>
   </div>
   <div class="card events-card">
-    <header class="card-header">
+    <div class="card-header">
       <p class="card-header-title"><i class="fas fa-vector-square"></i>Blocks</p>
-    </header>
+    </div>
     <div class="card-table">
         <table class="table is-fullwidth">
           <tbody>
