--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -303,3 +303,65 @@ footer p {
   margin-top: 20px;
 }
 
+/*-------------------------------------------------*/
+/* Responsive Nav */
+/*-------------------------------------------------*/
+@media screen and (max-width: 768px) {
+  .line {
+    width: 30px;
+    height: 3px;
+    background: white;
+    margin: 5px;
+  }
+  
+  nav {
+    position: relative;
+  }
+
+  .hamburger {
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 50%;
+    transform: translate(-5%, -50%);
+    z-index: 2;
+  }
+
+  .main-nav {
+    position: fixed;
+    background: #5b78c7;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    clip-path: circle(100px at 90% -10%);
+    -webkit-clip-path: circle(100px at 90% -10%);
+    transition: all 1s ease-out;
+    pointer-events: none;
+  }
+  .main-nav.open {
+    clip-path: circle(1000px at 90% -10%);
+    -webkit-clip-path: circle(1000px at 90% -10%);
+    pointer-events: all;
+  }
+  .landing {
+    flex-direction: column;
+  }
+  .main-nav li {
+    opacity: 0;
+  }
+  .main-nav li a {
+    font-size: 25px;
+  }
+  .main-nav li:nth-child(1) {
+    transition: all 0.5s ease 0.2s;
+  }
+  .main-nav li:nth-child(2) {
+    transition: all 0.5s ease 0.4s;
+  }
+  .main-nav li:nth-child(3) {
+    transition: all 0.5s ease 0.6s;
+  }
+  li.fade {
+    opacity: 1;
+  }
+}
