Finalizing merge with j and v2

--- a/src/app/tx/tx.component.html
+++ b/src/app/tx/tx.component.html
@@ -10,40 +10,6 @@
         (click) = 'clickButton(queryInputRef.value)' >
           Search
       </a>
-<!-- =======
-<div class="field has-addons">
-  <div class="control">
-    <input class="input" placeholder = "Enter tx hash" #queryInputRef >
-  </div>
-  <div class="control">
-    <a 
-      class = "button is-info" 
-      (click) = 'clickButton(queryInputRef.value)' >
-        Search
-    </a>
-  </div>
-</div>
-<div *ngIf="(tx?.hash); else elseBlock" class="card events-card">
-  <div class="card-table">
-    <div class="content">
-      <article class="message">
-        <div class="message-header">
-          <i class="fab fa-codepen"></i>
-          <p>Tx</p>
-        </div>
-        <div class="message-body">
-          <h3>Hash {{tx.hash}}</h3>
-          <h3>Height {{tx.height}}</h3>
-          <p>Gas: {{tx.gasUsed}}/{{tx.gasWanted}}</p>
-          <p>Tx Encode: {{tx.txBase64}}</p>
-          <p>Tx Decod: {{tx.txDecod}}</p>
-        </div>
-        <div *ngFor="let tag of tx.tagsDecod" class="message-body">
-          <h4>{{tag.key}}: {{tag.value}}</h4>
-          <!-- <h4>Height {{tx.height}}</h4> -->
-<!--         </div> -->
-<!--       </article> -->
-<!-- >>>>>>> master --> -->
     </div>
   </div>
 </div>
@@ -62,6 +28,8 @@
                       <tr class="query-name">Hash</tr>
                       <tr class="query-name">Height</tr>
                       <tr class="query-name">Gas</tr>
+                      <tr class="query-name">TX</tr>
+                      <tr class="query-name" *ngFor="let tag of tx.tagsDecod">{{tag.key | titlecase }}</tr>
                     </tbody>
                     </table>
               </div>
@@ -71,7 +39,9 @@
                         <tbody>
                           <tr>{{tx.hash}}</tr>
                           <tr>{{tx.height}}</tr>
-                          <tr>{{tx.tx_result.gasUsed}}/{{tx.tx_result.gasWanted}}</tr>
+                          <tr>{{tx.gasUsed}}/{{tx.gasWanted}}</tr>
+                          <tr>{{tx.txBase64}}</tr>
+                          <tr *ngFor="let tag of tx.tagsDecod">{{tag.value}}</tr>
                         </tbody>
                       </table>
                     </div>
