--- a/src/app/txs/txs.component.css
+++ b/src/app/txs/txs.component.css
@@ -7,15 +7,46 @@
 
 }
 
-table {
-  table-layout: fixed;
-  /*width: 100px;*/
+p {
+  padding: 1px;
 }
 
-td {
+.box {
+  padding: 1%;
+}
+
+/*-------------------------------------------------*/
+/* Table */
+/*-------------------------------------------------*/
+table {
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  /* border: 3px solid purple; */
+}
+
+/* thead th:nth-child(1) {
+  width: 10%;
+}
+
+thead th:nth-child(2) {
+  width: 10%;
+}
+
+thead th:nth-child(3) {
+  width: 20%;
+}
+
+thead th:nth-child(4) {
+  width: 20%;
+} */
+
+th, td {
+  width: 30%;
   overflow: hidden; /* to hide anything that doesn't fit in the containing element. */
   white-space: nowrap; /* to make sure the line doesn't break when it is longer than the containing div. */
   text-overflow: ellipsis;
+  /* flex: 20%; */
 }
 
 button {
@@ -26,15 +57,27 @@ button {
   background: #00796B;
 }
 
-.clickable:nth-child(odd){
+.card-header p {
+  margin-left: 6px;
+}
+
+tbody tr:nth-child(odd){
   background:#0D151F;
 }
 
-.clickable:nth-child(even){
+tbody tr:nth-child(even){
   background:#111923;
 }
 
 p,
 tbody {
   color: white;
+}
+
+.td-1 {
+  color: #FC7D14;
+}
+
+.td-2 {
+  color: #00A58F;
 }
