--- a/src/app/blocks/blocks.component.css
+++ b/src/app/blocks/blocks.component.css
@@ -7,9 +7,17 @@
 
 }
 
+p {
+  padding: 1px;
+}
+/*-------------------------------------------------*/
+/* Table */
+/*-------------------------------------------------*/
 table {
   table-layout: fixed;
-  /*width: 100px;*/
+  width: 100%;
+  border-collapse: collapse;
+  /* border: 3px solid purple; */
 }
 
 td {
@@ -19,6 +27,36 @@ td {
   text-align: left;
 }
 
+thead th:nth-child(1) {
+  width: 10%;
+}
+
+thead th:nth-child(2) {
+  width: 10%;
+}
+
+thead th:nth-child(3) {
+  width: 20%;
+}
+
+thead th:nth-child(4) {
+  width: 20%;
+}
+
+th, td {
+  padding: 20px;
+}
+
+tbody tr:nth-child(odd){
+  background:#0D151F;
+}
+
+tbody tr:nth-child(even){
+  background:#111923;
+}
+
+
+
 button {
   margin: 15px;
 }
@@ -27,12 +65,8 @@ button {
   background: #00796B;
 }
 
-.clickable:nth-child(odd){
-  background:#0D151F;
-}
-
-.clickable:nth-child(even){
-  background:#111923;
+.card-header p {
+  margin-left: 6px;
 }
 
 p,
