--- a/src/app/tx/tx.component.css
+++ b/src/app/tx/tx.component.css
@@ -7,6 +7,9 @@
   margin: 0 auto;
 }
 
+p {
+  padding: 1px;
+}
 /*-------------------------------------------------*/
 /* Paragraphs */
 /*-------------------------------------------------*/
