--- a/src/app/validators/validators.component.css
+++ b/src/app/validators/validators.component.css
@@ -1,27 +1,4 @@
 /*-------------------------------------------------*/
-/* Basic Setup */
-/*-------------------------------------------------*/
-html, body {
-  font-size: 20px;
-  line-height: 1.5;
-  height: 100%;
-  background: #111923;
-  color: white;
-  font-family: 'Lato', 'Arial', sans-serif;
-  font-weight: 300;
-  text-rendering: optimizeLegibility;
-}
-
-.clearfix {zoom: 1;}
-.clearfix:after {
-    content: '.';
-    clear: both;
-    display: block;
-    height: 0;
-    visibility: hidden;
-}
-
-/*-------------------------------------------------*/
 /* Reusable Components */
 /*-------------------------------------------------*/
 .row {
@@ -29,87 +6,53 @@ html, body {
   margin: 0 auto;
 }
 
-section {
-  padding: 20px 0;
-}
-
-.box {
-  padding: 1%;
-}
-
-/*-------------------------------------------------*/
-/* Heading */
-/*-------------------------------------------------*/
-h1,
-h2,
-h3 {
-    font-weight: 300;
-    /* text-transform: uppercase; */
-}
-
-h1 {
-  margin-top: 0;
-  margin-bottom: 20px;
-  color: #ffffff;
-  font-size: 200%;
-  /* word-spacing: 3px;
-  letter-spacing: 1px; */
-}
-
-h2 {
-  font-size: 150%;
-  word-spacing: 2px;
-  text-align: left;
-  margin-bottom: 30px;
-  letter-spacing: 1px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-h3 {
-  font-size: 110%;
-  margin-bottom: 15px;
-}
-
-/*-------------------------------------------------*/
-/* Paragraphs */
-/*-------------------------------------------------*/
 p {
-  font-size: 110%;
-  text-align: center;
-  line-height: 145%;
-  width: 70%;
-  margin-left: 15%;
+  padding: 1px;
 }
 
 /*-------------------------------------------------*/
-/* Links */
+/* Table */
 /*-------------------------------------------------*/
-a:link,
-a:visited {
-    color: white;
-    text-decoration: none;
-    /* padding-bottom: 10px; */
-    /* border-bottom: 1px solid #e67e22; */
-    transition: color 0.2s;
-}
-
-a:hover,
-a:active {
-    color:orange;
-    /* border-bottom: 1px solid transparent; */
-}
-
 table {
   table-layout: fixed;
-  /*width: 100px;*/
+  width: 100%;
+  border-collapse: collapse;
+  /* border: 3px solid purple; */
 }
 
 td {
   overflow: hidden; /* to hide anything that doesn't fit in the containing element. */
   white-space: nowrap; /* to make sure the line doesn't break when it is longer than the containing div. */
   text-overflow: ellipsis;
+  text-align: left;
+}
+
+/* thead th:nth-child(1) {
+  width: 10%;
+}
+
+thead th:nth-child(2) {
+  width: 10%;
+}
+
+thead th:nth-child(3) {
+  width: 20%;
+}
+
+thead th:nth-child(4) {
+  width: 20%;
+} */
+
+th, td {
+  padding: 20px;
+}
+
+tbody tr:nth-child(odd){
+  background:#0D151F;
+}
+
+tbody tr:nth-child(even){
+  background:#111923;
 }
 
 .validator-card{
@@ -148,3 +91,31 @@ td {
   width: 25%;
 }
 
+button {
+  margin: 15px;
+}
+
+.card-header {
+  background: #00796B;
+}
+
+.card-header p {
+  margin-left: 6px;
+}
+
+p,
+tbody {
+  color: white;
+}
+
+.td-1 {
+  color: #FC7D14;
+}
+
+.td-2 {
+  color: white;
+}
+
+.avatar {
+  size: 50%;
+}
