--- a/src/app/validators/validators.component.html
+++ b/src/app/validators/validators.component.html
@@ -9,17 +9,21 @@
       </a>
     </p>
   </div>
-  <div
+
+  <!-- <div
     *ngFor="let validator of (appState | async).validators"
     class="validator-card"
     id="{{validator.keys?.Addres}}">
       <article class="validator_body">
+
         <div class="validator-card-header">
           <i *ngIf="!validator.jailed" class="fas fa-user-check"></i>
           <i *ngIf="validator.jailed" class="fas fa-skull-crossbones"><span style="padding-left: 5px;">jailed</span></i>
           <p>Validator</p>
         </div>
+
         <div class="validator-card-text">
+          
           <figure class="image is-128x128" *ngIf="validator.keybase">
             <img  *ngIf="!validator.picture; else elseBlock" 
               src="https://ui-avatars.com/api/?size=128&name={{validator.description.moniker}}" 
@@ -29,17 +33,18 @@
               <img src="{{validator.picture}}" alt="avatar">
             </ng-template>
           </figure>
+
           <div class="validator__text--body">
             <p>Moniker:</p>
             <p>{{validator.description.moniker}}</p>
           </div>
+
           <div class="validator__text--body">
               <p>Tokens:</p>
               <p>{{validator.tokens}}</p>
               <br>
           </div>
-          <!-- Hacky but might work for now @aakatev -->
-          <!-- TODO improve logic more depending on state -->
+
           <div class="validator__text--body">
               <p>Commits:</p>
               <p 
@@ -50,6 +55,7 @@
                   ? (block.header.height-validator.slashing?.start_height-validator.slashing?.missed_blocks_counter) : 0">
               </p>
           </div>
+
           <table class="">
             <tbody>
               <tr>
@@ -57,9 +63,66 @@
               </tr>
             </tbody>
           </table>
+
         </div>
       </article>
+  </div> -->
+
+  <div class="card events-card">
+      <div class="card-header">
+        <p class="card-header-title"><i class="fas fa-vector-square"></i>Validators</p>
+      </div>
+      <div class="card-table">
+          <table class="table is-fullwidth">
+            <thead>
+              <tr>
+                <th >Name</th>
+                <th>Status/Uptime</th>
+                <th>Voting Weight</th>
+                <th>Precommits</th>
+                <th>Self-bond</th>
+                <th>Commission</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let validator of (appState | async).validators"
+              class="validator-card"
+              id="{{validator.keys?.Addres}}">
+                <td class="td-1">
+                  <div class="col span-1-of-2">
+                      <figure class="validatoe-avatar is-128x128" *ngIf="validator.keybase">
+                          <img  *ngIf="!validator.picture; else elseBlock" 
+                            src="https://ui-avatars.com/api/?size=50&name={{validator.description.moniker}}" 
+                            alt="avatar"
+                          >
+                          <ng-template #elseBlock>
+                            <img src="{{validator.picture}}" alt="avatar">
+                          </ng-template>
+                      </figure>
+                  </div>
+                  <div class="col span-1-of-2">
+                      {{validator.description.moniker}}
+                  </div>
+                </td>
+                <td class="td-2">Jailed?<br>Uptime%</td>
+                <td class="td-1">{{validator.tokens}}<br>Weight%</td>
+                <td class="td-2"
+                *ngFor="let block of (appState | async).blocks.slice(0,1)"
+                class="title chain-queries-title"
+                [innerHTML]=
+                  "block.header?.height !== null 
+                  ? (block.header.height-validator.slashing?.start_height-validator.slashing?.missed_blocks_counter) : 0">
+                </td>
+                <td class="td-2">in token<br>in %</td>
+                <td class="td-2">commission%</td>
+                <!-- <td><a class="button is-small is-primary" href="#">{{validator.power}}</a></td> -->
+              </tr>
+            </tbody>
+          </table>
+      </div>
   </div>
+  
+
 </div>
 
 
