WiP mapping validators and delegators; TODO Keybase API needs auth routes to make greater number of requests

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -166,7 +166,7 @@ header {
 }
 
 .landing {
-  height: 90vh;
+  /* height: 90vh; */
   /* display: flex; */
   justify-content: center;
   align-items: center;
